[package]
name = "mqtt-rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.4"
rumqttc = "0.24.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "asyncpubsub"
path = "src/asyncpubsub.rs"

[profile.release]
strip="symbols"
panic="abort"
lto="thin"
opt-level="s"